# elefeatures

./: .gitignore  99pdbs  99pdbs.csv  99pdbs_short.csv  99pdbs_sorted.csv  AGENT.md  HISTORY.md  LICENSE  README.md  folder.lst  mcce_elefeatures.tsv  merged_features.csv  protein_features.csv  pyproject.toml
4lzt/: entropy.out  fort.38  head2.lst  head3.lst  mc_out  pK.out  pK_extended.out  respair.lst  rot_stat  run.prm  run.prm.record  sum_crg.out  vdw0.lst
4lzt/energies/: ARG+1A0005_005.opp  ARG+1A0005_005.raw  ARG+1A0014_004.opp  ARG+1A0014_004.raw  ARG+1A0021_004.opp  ARG+1A0021_004.raw  ARG+1A0045_004.opp  ARG+1A0045_004.raw  ARG+1A0061_005.opp  ARG+1A0061_005.raw  ARG+1A0068_006.opp  ARG+1A0068_006.raw  ARG+1A0073_004.opp  ARG+1A0073_004.raw  ARG+1A0112_005.opp  ARG+1A0112_005.raw  ARG+1A0114_004.opp  ARG+1A0114_004.raw  ARG+1A0125_005.opp  ARG+1A0125_005.raw  ARG+1A0128_004.opp  ARG+1A0128_004.raw  ARG01A0005_001.opp  ARG01A0005_001.raw  ARG01A0014_001.opp  ARG01A0014_001.raw  ARG01A0021_001.opp  ARG01A0021_001.raw  ARG01A0045_001.opp  ARG01A0045_001.raw  ARG01A0061_001.opp  ARG01A0061_001.raw  ARG01A0068_001.opp  ARG01A0068_001.raw  ARG01A0073_001.opp  ARG01A0073_001.raw  ARG01A0112_001.opp  ARG01A0112_001.raw  ARG01A0114_001.opp  ARG01A0114_001.raw  (+582 more)
4lzt/param/: 00always_needed.tpl  mcce.tpl
scripts/: merge_features.py
src/mcce_features/: cli.py  core.py  features.py
