[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcce-features"
version = "0.5.0"
description = "Extract MCCE electrostatic features for PClass"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Junjun Mao", email = "junjun.mao@gmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["protein", "sequence", "structure", "function", "electrostatic"]


dependencies = [
    "numpy",
    "scipy",
    "typer>=0.12",
    "rich",
]


[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
mcce-features = "mcce_features.cli:app"


[project.urls]
Homepage = "https://github.com/pclass-lab/elefeatures"
Repository = "https://github.com/pclass-lab/elefeatures"
Issues = "https://github.com/pclass-lab/elefeatures/issues"
Documentation = "https://github.com/pclass-lab/elefeatures#README.md"

